--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-size: x-large;
+    color:#00b51a;
 }
 
 
@@ -81,13 +83,20 @@ border-color: darkblue !important;
     justify-items: center;
     margin:auto;left: auto;
 }
-#aboutlist{
-    display:flow-root;
-    align-items: center;
-    left:auto;
-    right: 2px;
-    list-style: none;
+#aboutsection{
+    background-image: url("/images/coralreefback.webp");
+}
+#aboutsection li{
+    display: grid;
+    justify-content: center;
     
+}
+#aboutlist{
+    list-style: none;
+    display:inline-block;
+    margin-left: 50px;
+    align-items: center; 
+    color:#66FF00;
 }
 #aboutlist li{
     display: flow-root;
@@ -101,4 +110,14 @@ border-color: darkblue !important;
     justify-content: center;
     margin-left: 40px;
     margin-top: 20px;
+}
+footer{
+    background-color: linear-gradient(200deg,aqua,magenta);
+    justify-content: center;
+    align-items: center;
+}
+.footerimages{
+    height:20px;
+    width:20px;
+    
 }
